# mlops-titanic

./: .coverage  .env  .gitignore  Makefile  README.md  coverage.xml  docker-compose.yml  hyperparams.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
configuration/: __init__.py  settings.py
data/processed/: feature_train.csv  feature_valid.csv  label_train.csv  label_valid.csv
data_engineering/: __init__.py  alembic.ini  main.py
data_engineering/alembic/: env.py
data_engineering/constant/: general_constant.py
data_extractor/: main.py
data_extractor/.envs/: .env.local
data_extractor/constant/: general_constant.py
data_extractor/extractor/: data_extractor.py  titanic_data_extractor.py
data_extractor/service/: kaggle_service.py
database/: database.py
docker/mlflow/: Dockerfile
docker/postgres/: Dockerfile
docker/terraform/: Dockerfile  main.tf
etl/: .env  __init__.py  alembic.ini  main.py
etl/alembic/: env.py
etl/config/: etl_config.py
etl/constant/: general_constant.py
etl/process/: etl_process.py  titanic_etl_process.py
etl/transform/: preprocessor.py  transformation_composite.py  transformation_strategy.py
feature_pipeline/: main.py
feature_pipeline/artifact/: feature_pipeline.joblib
feature_pipeline/config/: feature_pipeline_config.py  feature_process_config.py
inference_pipeline/: .env  __init__.py  main.py
ml_engineering/: main.py
mlflow/: Dockerfile
notebooks/: model_evaluation_xgboost.ipynb
outputs/: pytest-report.html
test/: base_test.py
training_pipeline/: __init__.py  main.py
(+91 files in other folders)
