[tool.poetry]
name = "mlops-titanic"
version = "0.1.0"
description = ""
authors = ["Reisson Saavedra <reisson.saavedra.miguel@gmail.com>"]
readme = "README.md"
packages = [{include = "mlops_titanic"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
kaggle = "^1.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
