[tool.poetry]
name = "mlops-titanic"
version = "0.1.0"
description = ""
authors = ["Reisson Saavedra <reisson.saavedra.miguel@gmail.com>"]
readme = "README.md"
packages = [{include = "mlops_titanic"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
kaggle = "^1.5.13"
psycopg2-binary = "^2.9.6"
loguru = "^0.7.0"
alembic = "^1.10.4"
pendulum = "2.0.0"
apache-airflow = "^2.6.0"
sqlalchemy = "1.4.48"
airflow-provider-alembic = "^1.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
